# IoT

./: .gitignore  Local-First-Architecture.md  README.md  pyproject.toml
.github/workflows/: ci.yml
app/iot_home/: __init__.py  collector.py  dashboard.py  db.py  floorplan.py  locations.py  mqtt_schema.py  publish_config.py  publish_ota.py  simulator.py
config/: floorplan.sample.json  locations.sample.json  mosquitto-local-test.conf
deploy/systemd/: iot-home-collector.service  iot-home-dashboard.service
docs/: backup-runbook.md  current-status.md  decision-record.md  hardware-notes.md  implementation-plan.md  mqtt-schema.md  phase-1-runbook.md  phase-2-runbook.md  phase-4-runbook.md  progress-log.md  security-hardening.md
firmware/: platformio.ini
firmware/include/: ota_public_key.h  ota_public_key.sample.h  secrets.sample.h
firmware/src/: main.cpp
scripts/: add_mqtt_device_user.sh  backup_sqlite.sh  configure_mosquitto_lan.sh  configure_mosquitto_tls_acl.sh  init_db.py  install_systemd_services.sh  restic_iot_backup.sh
tests/: test_db.py  test_floorplan.py  test_locations.py  test_publish_config.py
