[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "iot-home"
version = "0.1.0"
description = "Local-first Raspberry Pi IoT home monitoring tools."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "paho-mqtt>=2.0,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[tool.setuptools]
package-dir = {"" = "app"}

[tool.setuptools.packages.find]
where = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["app"]
